// The Firmament project
// Copyright (c) 2015 Malte Schwarzkopf <malte.schwarzkopf@cl.cam.ac.uk>
//
// Resource request protobuf.

package firmament;

message ResourceRequest {
  optional uint64 cpu_cores = 1;
  optional uint64 ram_gb = 2;
  optional uint64 ram_bw = 3;
  optional uint64 disk_bw = 4;
  optional uint64 net_bw = 5;
}
